[package]
name = "todo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
env_logger = "0.11.3"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
dotenv = "0.15.0"
